tests/integration/errors/test_struct_circular_array.sn
# Error test: struct with circular dependency through array

struct TreeNode =>
    value: int
    children: TreeNode[]

fn main(): void =>
    print("Should not compile\n")
